# PlatON-CDT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_cn.md  multi_index_test.cpp
CMakeModules/: BoostExternalProject.txt  InstallCDT.cmake  LLVMExternalProject.txt  LibrariesExternalProject.txt  (+5 more)
depends/: CMakeLists.txt
libraries/: CMakeLists.txt  extern_symbol
libraries/builtins/: CMakeLists.txt  assembly.h  floatditf.c  floatsidf.c  floatsisf.c  floatsitf.c  floattitf.c  floatunditf.c  floatunsidf.c  floatunsisf.c  floatunsitf.c  floatuntitf.c  fp_fixint_impl.inc  fp_fixuint_impl.inc  fp_lib.h  int_endianness.h  int_lib.h  int_math.h  int_types.h  int_util.h
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/libc++/libcxx/include/: ctime  iostream
libraries/libc++/libcxx/src/: algorithm.cpp  locale.cpp  platon.cpp  string.cpp
libraries/libc++/libcxx/src/support/runtime/: exception_fallback.ipp
libraries/libc/musl/include/: float.h
libraries/libc/musl/include/bits/: stddef.h
libraries/libc/musl/src/exit/: _Exit.c
libraries/libc/musl/src/include/: time.h
libraries/libc/musl/src/internal/: libm.h  malloc_impl.h  pthread_impl.h  stdio_impl.h
libraries/libc/musl/src/locale/: dcngettext.c  iconv.c  iconv_close.c  locale_map.c  newlocale.c
libraries/libc/musl/src/malloc/: memalign.c
libraries/libc/musl/src/math/: fmaf.c  fmal.c  llrintl.c  lrint.c  lrintl.c  nearbyint.c  nearbyintf.c  nearbyintl.c
libraries/libc/musl/src/multibyte/: btowc.c
libraries/libc/musl/src/stdio/: __lockfile.c  __stdio_close.c  __stdio_read.c  __stdio_seek.c  __stdio_write.c  __stdout_write.c  fopencookie.c  getc.h  platon_printf.c  putc.h  vfprintf.c  vfscanf.c  vfwprintf.c
libraries/libc/musl/src/stdlib/: atof.c
libraries/libc/musl/src/string/: strsignal.c
libraries/libc/musl/src/thread/: __lock.c
libraries/libc/musl/src/time/: __tz.c  strftime.c  time.c
libraries/platonlib/contract/: destory_contract.cpp  update_contract.cpp
libraries/platonlib/include/: rlp_extend.hpp
libraries/platonlib/include/platon/: RLP.h  assert.h  assert.hpp  authority.hpp  bech32.hpp  bigint.hpp  bigint_impl.hpp  bytes_buffer.hpp  chain.hpp  chain_impl.hpp  common.h  contract.hpp  create.hpp  cross_call.hpp  datastream.h  destory.hpp  dispatcher.hpp  event.hpp  exception.h  exchange.hpp  fixedhash.hpp  mimc.hpp  name.hpp  panic.hpp  platon.hpp  print.hpp  rlp_extend.hpp  rlp_serialize.hpp  rlp_size.hpp  serialize.hpp  service.hpp  state.hpp  storage.hpp  storagetype.hpp  string_buffer.h  txencode.hpp  varint.hpp  vector_ref.h
libraries/platonlib/include/platon/container/: rbtree.h  set.h  string.hpp  vector.h
libraries/platonlib/include/platon/crypto/bls12381/: bls12381.hpp
libraries/platonlib/include/platon/crypto/bls12381/zk/g16/: verify_template.hpp
libraries/platonlib/include/platon/crypto/bls12381/zk/plonk/: verify_template.hpp
libraries/platonlib/include/platon/crypto/bn256/: aosring.hpp  bn256.hpp  borromean.hpp  pedersen.hpp  schnorr.hpp
libraries/platonlib/include/platon/crypto/bn256/zk/g16/: verify.hpp  verify_template.hpp
libraries/platonlib/include/platon/crypto/bn256/zk/gm17/: verify.hpp  verify_template.hpp
libraries/platonlib/include/platon/crypto/bn256/zk/pghr13/: verify.hpp  verify_template.hpp
libraries/platonlib/include/platon/crypto/bn256/zk/plonk/: verify_template.hpp
libraries/platonlib/include/platon/db/: array.hpp  map.hpp  multi_index.hpp
libraries/platonlib/include/platon/hash/: mimc.hpp  poseidon.hpp  rescue.hpp
libraries/platonlib/include/platon/merkle/: hash.hpp  merkle_tree.hpp  simple_merkle_tree.hpp
libraries/platonlib/include/platon/solidity/: common.hpp  decode.hpp  encode.hpp  encode_size.hpp  sol_cross_call.hpp  sol_serialize.hpp
libraries/platonlib/malloc/: CMakeLists.txt  simple_malloc.cpp
libraries/platonlib/src/: CMakeLists.txt  RLP.cpp  abort.cpp  assert.cpp  dispatcher_test.cpp  malloc.cpp  poseidon.cpp  rlp_test.cpp  simple_malloc.cpp  storage_test.cpp
libraries/platonlib/src/container/: rbtree.cpp  vector.cpp
libraries/platonlib/test/: authority_test.cpp  contract.cpp  contract_test.cpp  cross_call_contract.cpp  cross_call_test.cpp  destory_contract.cpp  dispatcher_test.cpp  event_test.cpp  input_test.cpp  migrate_test.cpp  print_test.cpp  rlp_test.cpp  storage_test.cpp
tools/: CMakeLists.txt
tools/abi/: AbiDef.h  AbiGenerator.cpp  AbiGenerator.h  AbiJson.cpp  AbiJson.h  AbiMacro.cpp  AbiMacro.h  CMakeLists.txt  Common.h  Exception.h  Log.cpp  Log.h  StringUtil.cpp  StringUtil.h  Template.cpp  Template.h  main.cpp
tools/cpp/: CMakeLists.txt  platon-cpp.cpp
tools/include/: options.hpp
tools/include/platon/: utils.hpp
tools/init/: CMakeLists.txt  platon-init.cpp
tools/ld/: CMakeLists.txt  platon-ld.cpp
tools/platon-cpp/: Backend.cpp  CMakeLists.txt  DisableFloat.cpp  Option.h  PCCPass.cpp  README.md  RemoveAttrs.cpp  parseArgs.cpp  platon-cpp.cpp
tools/platon-cpp/MakeAbi/: CMakeLists.txt  HandleElem.cpp  HandlePlatonType.cpp  HandleStdType.cpp  HandleType.cpp  MakeAbi.cpp  MakeAbi.h
tools/platon-cpp/unittest/: ABITest.cpp  CMakeLists.txt  unit_test.hpp
tools/platon-sol/: .gitignore  CMakeLists.txt  README.md  build.sh  command.go  flags.go  go.mod  go.sum  main.go
tools/platon-sol/abi/: abi.go  decode.go  type.go
tools/platon-sol/parse/: generate.go
tools/platon-sol/sol/: structs.go  structs_marshal.go  structs_marshal_test.go  structs_unmarshal.go  structs_unmarshal_test.go
tools/platon-sol/sol/abi/: abi.go  topics.go
tools/platon-sol/sol/parse/: generate.go  generate_test.go  template.go
tools/platon-sol/sol/parse/test/: abi_test.json  abi_test.sol  abi_test_cpp.json
tools/platon-sol/wasm/: abi.go  abi_test.go  genarete.go  template.go  type.go  type_test.go
tools/platon-sol/wasm/test/: contract.abi.json  contract.abi.sol
tools/platon-test/: CMakeLists.txt  README.md  build_test.sh  go.mod  go.sum  platon.go  vm.go
tools/platon-test/core/: chain.go  compile.go  db.go  exec.go  flags.go  gas.go  help.go  solidity.go  test.go  vm.go
(+104 files in other folders)
