cmake_minimum_required(VERSION 3.4.3)

if(NOT DEFINED LLVM_CONFIG)
  find_program(LLVM_CONFIG_LOCAL NAMES llvm-config-8.0)
  if(LLVM_CONFIG_LOCAL)
    set(LLVM_CONFIG ${LLVM_CONFIG_LOCAL} CACHE FILEPATH "llvm-config executable file")
  endif()

  if(NOT DEFINED LLVM_CONFIG AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/clang_llvm_8.0)
    set(LLVM_CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/clang_llvm_8.0/bin/llvm-config CACHE FILEPATH "llvm-config executable file")
  endif()

  if(NOT DEFINED LLVM_CONFIG)
    if (APPLE)
      execute_process(COMMAND wget --progress=bar:force http://releases.llvm.org/8.0.0/clang+llvm-8.0.0-x86_64-apple-darwin.tar.xz)
      execute_process(COMMAND tar -xvf clang+llvm-8.0.0-x86_64-apple-darwin.tar.xz)
      execute_process(COMMAND rm clang+llvm-8.0.0-x86_64-apple-darwin.tar.xz)
      execute_process(COMMAND mv clang+llvm-8.0.0-x86_64-apple-darwin clang_llvm_8.0)
      execute_process(COMMAND mv clang_llvm_8.0/ ${CMAKE_CURRENT_SOURCE_DIR})
      set(LLVM_CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/clang_llvm_8.0/bin/llvm-config CACHE FILEPATH "llvm-config executable file")
    elseif(UNIX)
      execute_process(COMMAND wget --progress=bar:force http://releases.llvm.org/8.0.0/clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz)
      execute_process(COMMAND tar -xvf clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz)
      execute_process(COMMAND rm clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz)
      execute_process(COMMAND mv clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04 clang_llvm_8.0)
      execute_process(COMMAND mv clang_llvm_8.0/ ${CMAKE_CURRENT_SOURCE_DIR})
      set(LLVM_CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/clang_llvm_8.0/bin/llvm-config CACHE FILEPATH "llvm-config executable file")
    else()
      message(FATAL_ERROR "Your are using the system does not support build currently, please use Ubuntu 18.04 or macOS.")
    endif()
  endif()

endif()

set(LLVM_CONFIG_FILE ${LLVM_CONFIG} CACHE FILEPATH "llvm-config executable file")

# binaryen wasm-opt
if(NOT DEFINED WASM_OPT)
  find_program(WASM_OPT_LOCAL NAMES wasm-opt)
  if(WASM_OPT_LOCAL)
    set(WASM_OPT ${WASM_OPT_LOCAL})
  endif()
  if(NOT DEFINED WASM_OPT AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/binaryen-version_91)
    set(WASM_OPT ${CMAKE_CURRENT_SOURCE_DIR}/binaryen-version_91/wasm-opt)
  endif()
  if(NOT DEFINED WASM_OPT)
    if (APPLE)
      execute_process(COMMAND wget -P ${CMAKE_CURRENT_SOURCE_DIR} --progress=bar:force https://github.com/WebAssembly/binaryen/releases/download/version_91/binaryen-version_91-x86_64-apple-darwin.tar.gz)
      execute_process(COMMAND tar -xvf ${CMAKE_CURRENT_SOURCE_DIR}/binaryen-version_91-x86_64-apple-darwin.tar.gz -C ${CMAKE_CURRENT_SOURCE_DIR})
      execute_process(COMMAND rm ${CMAKE_CURRENT_SOURCE_DIR}/binaryen-version_91-x86_64-apple-darwin.tar.gz)
      set(WASM_OPT ${CMAKE_CURRENT_SOURCE_DIR}/binaryen-version_91/wasm-opt)
    elseif(UNIX)
      execute_process(COMMAND wget -P ${CMAKE_CURRENT_SOURCE_DIR} --progress=bar:force https://github.com/WebAssembly/binaryen/releases/download/version_91/binaryen-version_91-x86_64-linux.tar.gz)
      execute_process(COMMAND tar -xvf ${CMAKE_CURRENT_SOURCE_DIR}/binaryen-version_91-x86_64-linux.tar.gz -C ${CMAKE_CURRENT_SOURCE_DIR})
      execute_process(COMMAND rm ${CMAKE_CURRENT_SOURCE_DIR}/binaryen-version_91-x86_64-linux.tar.gz)
      set(WASM_OPT ${CMAKE_CURRENT_SOURCE_DIR}/binaryen-version_91/wasm-opt)
    else()
      message(FATAL_ERROR "Your are using the system does not support build currently, please use Ubuntu 18.04 or macOS.")
    endif()
  endif()
endif()

if(WASM_OPT_LOCAL)
  message("wasm-opt Is already installed to: ${WASM_OPT_LOCAL}")
else()
  install(PROGRAMS ${WASM_OPT} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
endif()